= CHANGELOG

==  tokenomy-go v0.4.0

===  Breaking changes

*  trade: remove the ambiguous TradeID field

===  New features

*  v2: add method to get trade information in private WebSocket
*  v2: add method to get user information in private WebSocket

===  Enhancements

*  all: define default dial and request/response timeout for HTTP client


==  tokenomy-go v0.3.0

v2: implement private WebSocket client

The private WebSocket client can handle trade, trade cancellation,
and listing open trades.


==  tokenomy-go v0.2.1

v2: remove pair checks, let the server do the check

Due to changes on pairs on the server, client may still use the old
module that contains delisted pairs or not contains new pairs.
This may cause an unexpected errors on the client side.

To minimize this error, we remove the check on pairs and let the server
do them.


==  tokenomy-go v0.2.0

This release refactoring the struct Order and Trade in v2 to make it
consistent.
In v1, we use the term "order" and "trade" to convey the same information.
In v2, we use the term "trade" for all information related to trading,
either open or closed.

===  Breaking changes

*  Change the market trades open API from "/v2/market/orders/open" to
   "/v2/market/trades/open"

*  Change the user's trades open API from "/v2/user/orders/open" to
   "/v2/user/trades/open"

*  Change the user's trades closed API from "/v2/user/orders/closed" to
   "/v2/user/trades/closed"

*  Change the user's trade information API from "/v2/user/order" to
   "/v2/user/trade"


==  tokenomy-go v0.1.0

List of features in this release,

*  REST client for API v1, and
*  REST client for API v2


List of functionalities for each client,

*  Market,
**  Info: list of all available pairs including limit information and
    market status.
**  OrdersOpen: list the public open order book (buy and sell) for
    specific pair.
**  Summaries: retrieve the summary of all traded pairs, highest price,