@@ -165,6 +165,38 @@ func (cl *PrivateWebSocket) TradeBid(
 }
 
 //
+// TradeCancel cancel the open trade using ID and pair information in Trade.
+//
+func (cl *PrivateWebSocket) TradeCancel(trade *tokenomy.Trade) (
+	*tokenomy.Trade, error,
+) {
+	if trade.ID <= 0 {
+		return nil, tokenomy.ErrInvalidTradeID
+	}
+	if len(trade.Pair) == 0 {
+		return nil, tokenomy.ErrInvalidPair
+	}
+
+	var (
+		tradeResponse *tokenomy.TradeResponse
+		err           error
+	)
+
+	switch trade.Type {
+	case tokenomy.TradeTypeAsk:
+		tradeResponse, err = cl.TradeCancelAsk(trade.Pair, trade.ID)
+	case tokenomy.TradeTypeBid:
+		tradeResponse, err = cl.TradeCancelBid(trade.Pair, trade.ID)
+	default:
+		return nil, tokenomy.ErrInvalidTradeType
+	}
+	if err != nil {
+		return nil, err
+	}
+	return tradeResponse.Trade, nil
+}
+
+//
 // TradeCancelAsk cancel the specific open sell by pair and ID.
 //
 func (cl *PrivateWebSocket) TradeCancelAsk(pairName string, id int64) (
